--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -72,8 +72,8 @@
     "default_profile": "write",
     "always_allow_tool_actions": true,
     "default_model": {
-      "provider": "anthropic",
-      "model": "claude-opus-4-5-latest"
+      "provider": "zed.dev",
+      "model": "claude-opus-4-5"
     }
   },
   "edit_predictions": {
